# haydee-ai-outfit-generator

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: lint.yml  publish.yml  tests.yml
core/: config.py  gemini_client.py  image_processor.py
haydee_outfit_gen/: __init__.py  gemini_client.py  image_processor.py  main.py  mod_builder.py
tests/: conftest.py  test_config.py  test_gemini_client.py  test_image_processor.py  test_main.py  test_mod_builder.py
